# cocryovis

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .prettierignore  README.md  build.sh  build_client.sh  build_submodules.sh  conda-packages.txt  conda-spec-file-linux.txt  config.json  config.mjs  db.json  default_data.json  eslint.config.js  index.mjs  install_ilastik.sh  jsconfig.json  openapi.yaml  openapi1.yaml  package-lock.json  package.json  requirements.txt  types.d.ts
client/: .gitignore  .prettierignore  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.mjs  vite.config.ts
controllers/: abstract-checkpoint-controller.mjs  abstract-controller.mjs  abstract-model-controller.mjs  abstract-project-controller.mjs  abstract-result-controller.mjs  abstract-volume-controller.mjs  abstract-volume-data-controller.mjs  checkpoint-controller.mjs  controller-factory.mjs  ilastik-controller.mjs  model-controller.mjs  nano-oetzi-controller.mjs  (+5 more)
controllers-api/: checkpoint-controller.mjs  ilastik-controller.mjs  model-controller.mjs  nano-oetzi-controller.mjs  project-controller.mjs  result-controller.mjs  user-controller.mjs  volume-controller.mjs  volume-data-controller.mjs
server/modules/Proximal_CryoET/CUDA_PROXIMAL_SART/: CMakeLists.txt
server/modules/Proximal_CryoET/CUDA_PROXIMAL_SART/src/: MRCParser.cpp  MRCParser.h  NLM.h  admm.h  bilinear.txt  data_term_proximal_operator.h  gaussian.txt  global_definitions.h  huber_proximal_operator.h  kaiser.txt  kernel_functions.h  linearized_admm.h  main.cu  primal_dual.h  proximal_iteration.h  tv_proximal_operator.h
server/modules/Proximal_CryoET/CUDA_PROXIMAL_SART/src/CImg-2.6.1/: README.txt
server/modules/Proximal_CryoET/CUDA_PROXIMAL_SART/src/Filters/: Bessel_kaiser.m  Bilinear.m  Gaussian.m
(+706 files in other folders)
